fixing push unshift

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,9 @@ button.clicked {
     visibility: visible;
 }
 
+main {
+    min-height: 80vh;
+}
 
 header, footer {
     position: relative;
@@ -453,7 +456,7 @@ input[type="color"]:hover, input[type="number"]:hover, select:hover {
     .main-container {
         flex-direction: column;
         padding: 15px;
-        height: 90%;
+        /* height: 90%; */
     }
     .canvas-container {
         margin-right: 0;
@@ -484,12 +487,14 @@ input[type="color"]:hover, input[type="number"]:hover, select:hover {
         padding: 0;
     }
     .canvas-container {
-        height: 60%;
+        /* height: 60%; */
+        height: 50%;
         width: 80%;
         margin: 5%;
     }
     .options-container {
-        height: 40%;
+        /* height: 40%; */
+        height: 50%;
         margin: 5%;
         width: 95%;
     }
